Fix spacing issues

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -368,23 +368,27 @@ pre.astro-code {
   counter-reset: listitem;
 }
 
-.sl-markdown-content ol:not(:where(.not-content *))>li,
-.sl-markdown-content ul:not(:where(.not-content *))>li {
+.sl-markdown-content ol:not(:where(.sl-steps,.not-content *))>li,
+.sl-markdown-content ul:not(:where(.sl-steps,.not-content *))>li {
   position: relative;
   padding-left: 1.85rem;
 }
 
 .sl-markdown-content li:not(:where(.not-content *))>ol,
 .sl-markdown-content li:not(:where(.not-content *))>ul,
-.sl-markdown-content li+li:not(:where(.not-content *)) {
+.sl-markdown-content li+li:not(:where(.not-content *))
+.sl-markdown-content li:not(:where(.sl-steps))>ol
+{
   margin-top: 0.625rem;
 }
 
-.sl-markdown-content li> :last-child:not(li, ul, ol):not(a, strong, em, del, span, input, :where(.not-content *)) {
-  margin-bottom: calc(var(--paragraph-spacing) + 0.5rem);
+.sl-markdown-content li> :last-child:not(li, ul, ol):not(a, strong, em, del, span, input,:where(.not-content *))
+
+{
+  /* margin-bottom: calc(var(--paragraph-spacing) + 0.5rem); */
 }
 
-.sl-markdown-content ul:not(:where(.not-content *))>li:before {
+.sl-markdown-content ul:not(:where(.sl-steps,.not-content *))>li:before {
   content: "";
   position: absolute;
   left: 2px;
@@ -395,7 +399,7 @@ pre.astro-code {
   background: var(--list-marker-color);
 }
 
-.sl-markdown-content ol:not(:where(.not-content *))>li:before {
+.sl-markdown-content ol:not(:where(.sl-steps, .not-content *))>li:before {
   counter-increment: listitem;
   content: counter(listitem);
   position: absolute;
@@ -414,7 +418,6 @@ pre.astro-code {
   font-family: var(--sl-font-mono);
   border: 1px solid var(--divider-color);
   box-shadow: var(--sl-shadow-sm);
-
 }
 
 
